--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SERVER_PORT = 5000
-MONGO_DB_URL = 
+MONGO_DB_URL = mongodb+srv://root:admin@cluster0.5jztz.mongodb.net/authDesignRestApi?retryWrites=true&w=majority
